log

Wed 13 Mar 2024 08:31:01 PM UTC: 
 tests:  0|7
total_score: 0/70
e740d5a
Wed 13 Mar 2024 08:34:38 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
d27c9ed
Wed 13 Mar 2024 08:35:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
0b07f1d
Wed 13 Mar 2024 08:40:14 PM UTC: 
 exercises.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:7: error: unused variable ‘temp’ [-Werror=unused-variable]
   33 |   int temp = 0;
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
43805e7
Wed 13 Mar 2024 08:40:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Wed 13 Mar 2024 08:40:26 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
704d80d
